Opened 14 years ago

Closed 14 years ago

#1669 closed defect (fixed)

something bad happened to -codecs list order

Reported by: ami_stuff Owned by:
Priority: important Component: undetermined
Version: git-master Keywords: regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

C:\>ffmpeg -codecs
ffmpeg version N-43779-g7123e95 Copyright (c) 2000-2012 the FFmpeg developers
  built on Aug 21 2012 02:36:48 with gcc 4.5.0 (GCC) 20100414 (Fedora MinGW 4.5.
0-1.fc14)
  configuration: --prefix=/var/www/users/research/ffmpeg/snapshots/build --arch=
x86 --target-os=mingw32 --cross-prefix=i686-pc-mingw32- --cc='ccache i686-pc-min
gw32-gcc' --enable-w32threads --enable-memalign-hack --enable-runtime-cpudetect
--enable-cross-compile --enable-static --disable-shared --extra-libs='-lws2_32 -
lwinmm -lpthread' --extra-cflags='--static -I/var/www/users/research/ffmpeg/snap
shots/build/include' --extra-ldflags='-static -L/var/www/users/research/ffmpeg/s
napshots/build/lib' --enable-bzlib --enable-zlib --enable-gpl --enable-version3
--enable-nonfree --enable-libx264 --enable-libspeex --enable-libtheora --enable-
libvorbis --enable-libfaac --enable-libxvid --enable-libopencore-amrnb --enable-
libopencore-amrwb --enable-libmp3lame --enable-libvpx --disable-decoder=libvpx
  libavutil      51. 70.100 / 51. 70.100
  libavcodec     54. 54.100 / 54. 54.100
  libavformat    54. 25.104 / 54. 25.104
  libavdevice    54.  2.100 / 54.  2.100
  libavfilter     3. 13.100 /  3. 13.100
  libswscale      2.  1.101 /  2.  1.101
  libswresample   0. 15.100 /  0. 15.100
  libpostproc    52.  0.100 / 52.  0.100
Codecs:
 D... = Decoding supported
 .E.. = Encoding supported
 ..V. = Video codec
 ..A. = Audio codec
 ..S. = Subtitle codec
 ...I = Intra frame-only codec
 -----
DEV. mpeg1video           MPEG-1 video
DEV. mpeg2video           MPEG-1 video (decoders: mpeg2video mpegvideo )
..V. mpegvideo_xvmc       MPEG-1/2 video XvMC (X-Video Motion Compensation)
DEV. h261                 H.261
DEV. h263                 H.263 / H.263-1996, H.263+ / H.263-1998 / H.263 versio
n 2
DEV. rv10                 RealVideo 1.0
DEV. rv20                 RealVideo 1.0
DEVI mjpeg                Motion JPEG
D.VI mjpegb               Apple MJPEG-B
.EVI ljpeg                Lossless JPEG
D.VI sp5x                 Sunplus JPEG (SP5X)
DEVI jpegls               JPEG-LS
DEV. mpeg4                MPEG-4 part 2 (encoders: mpeg4 libxvid )
DEVI rawvideo             raw video
D.V. msmpeg4v1            MPEG-4 part 2 Microsoft variant version 1
DEV. msmpeg4v2            MPEG-4 part 2 Microsoft variant version 2
DEV. msmpeg4v3            MPEG-4 part 2 Microsoft variant version 3 (decoders: m
smpeg4 ) (encoders: msmpeg4 )
DEV. wmv1                 Windows Media Video 7
DEV. wmv2                 Windows Media Video 8
DEV. h263p                H.263+ / H.263-1998 / H.263 version 2
D.V. h263i                Intel H.263
DEV. flv1                 FLV / Sorenson Spark / Sorenson H.263 (Flash Video) (d
ecoders: flv ) (encoders: flv )
DEV. svq1                 Sorenson Vector Quantizer 1 / Sorenson Video 1 / SVQ1
D.V. svq3                 Sorenson Vector Quantizer 3 / Sorenson Video 3 / SVQ3
DEVI dvvideo              DV (Digital Video)
DEVI huffyuv              HuffYUV
D.VI cyuv                 Creative YUV (CYUV)
DEV. h264                 H.264 / AVC / MPEG-4 AVC / MPEG-4 part 10 (encoders: l
ibx264 libx264rgb )
D.V. indeo3               Intel Indeo 3
D.V. vp3                  On2 VP3
DEV. theora               Theora (encoders: libtheora )
DEVI asv1                 ASUS V1
DEVI asv2                 ASUS V2
DEV. ffv1                 FFmpeg video codec #1
D.V. 4xm                  4X Movie
D.VI vcr1                 ATI VCR1
DEVI cljr                 Cirrus Logic AccuPak
D.VI mdec                 Sony PlayStation MDEC (Motion DECoder)
DEV. roq                  id RoQ video (decoders: roqvideo ) (encoders: roqvideo
 )
D.V. interplayvideo       Interplay MVE video
D.V. xan_wc3              Wing Commander III / Xan
D.V. xan_wc4              Wing Commander IV / Xxan
D.V. rpza                 QuickTime video (RPZA)
D.V. cinepak              Cinepak
D.V. ws_vqa               Westwood Studios VQA (Vector Quantized Animation) vide
o (decoders: vqavideo )
D.V. msrle                Microsoft RLE
DEV. msvideo1             Microsoft Video 1
D.V. idcin                id Quake II CIN video (decoders: idcinvideo )
D.VI 8bps                 QuickTime 8BPS video
D.V. smc                  QuickTime Graphics (SMC)
D.V. flic                 Autodesk Animator Flic video
D.V. truemotion1          Duck TrueMotion 1.0
D.V. vmdvideo             Sierra VMD video
D.VI mszh                 LCL (LossLess Codec Library) MSZH
DEVI zlib                 LCL (LossLess Codec Library) ZLIB
DEV. qtrle                QuickTime Animation (RLE) video
DEV. snow                 Snow
D.V. tscc                 TechSmith Screen Capture Codec (decoders: camtasia )
D.V. ulti                 IBM UltiMotion (decoders: ultimotion )
D.VI qdraw                Apple QuickDraw
D.VI vixl                 Miro VideoXL (decoders: xl )
D.V. qpeg                 Q-team QPEG
DEV. png                  PNG (Portable Network Graphics) image
DEVI ppm                  PPM (Portable PixelMap) image
DEVI pbm                  PBM (Portable BitMap) image
DEVI pgm                  PGM (Portable GrayMap) image
DEVI pgmyuv               PGMYUV (Portable GrayMap YUV) image
DEVI pam                  PAM (Portable AnyMap) image
DEVI ffvhuff              Huffyuv FFmpeg variant
D.V. rv30                 RealVideo 3.0
D.V. rv40                 RealVideo 4.0
D.V. vc1                  SMPTE VC-1
D.V. wmv3                 Windows Media Video 9
D.VI loco                 LOCO
D.VI wnv1                 Winnov WNV1
D.V. aasc                 Autodesk RLE
D.V. indeo2               Intel Indeo 2
D.V. fraps                Fraps
D.V. truemotion2          Duck TrueMotion 2.0
DEVI bmp                  BMP (Windows and OS/2 bitmap)
D.V. cscd                 CamStudio (decoders: camstudio )
D.V. mmvideo              American Laser Games MM Video
DEV. zmbv                 Zip Motion Blocks Video
D.V. avs                  AVS (Audio Video Standard) video
D.V. smackvideo           Smacker video (decoders: smackvid )
D.V. nuv                  NuppelVideo/RTJPEG
D.V. kmvc                 Karl Morton's video codec
DEV. flashsv              Flash Screen Video v1
D.V. cavs                 Chinese AVS (Audio Video Standard) (AVS1-P2, JiZhun pr
ofile)
DEVI jpeg2000             JPEG 2000 (decoders: j2k ) (encoders: j2k )
D.V. vmnc                 VMware Screen Codec / VMware Video
D.V. vp5                  On2 VP5
D.V. vp6                  On2 VP6
D.V. vp6f                 On2 VP6 (Flash version)
DEVI targa                Truevision Targa image
D.V. dsicinvideo          Delphine Software International CIN video
D.V. tiertexseqvideo      Tiertex Limited SEQ video
DEVI tiff                 TIFF image
DEV. gif                  GIF (Graphics Interchange Format)
D.V. dxa                  Feeble Files/ScummVM DXA
DEVI dnxhd                VC3/DNxHD
D.VI thp                  Nintendo Gamecube THP video
DEVI sgi                  SGI image
D.V. c93                  Interplay C93
D.V. bethsoftvid          Bethesda VID video
D.VI ptx                  V.Flash PTX image
D.VI txd                  Renderware TXD (TeXture Dictionary) image
D.V. vp6a                 On2 VP6 (Flash version, with alpha channel)
DEVI amv                  AMV Video
D.V. vb                   Beam Software VB
DEVI pcx                  PC Paintbrush PCX image
DEVI sunrast              Sun Rasterfile image
D.V. indeo4               Intel Indeo Video Interactive 4
D.V. indeo5               Intel Indeo Video Interactive 5
D.V. mimic                Mimic
D.VI rl2                  RL2 video
D.V. escape124            Escape 124
D.V. dirac                Dirac
D.V. bfi                  Brute Force & Ignorance
D.V. cmv                  Electronic Arts CMV video (decoders: eacmv )
D.V. motionpixels         Motion Pixels video
D.V. tgv                  Electronic Arts TGV video (decoders: eatgv )
D.V. tgq                  Electronic Arts TGQ video (decoders: eatgq )
D.V. tqi                  Electronic Arts TQI video (decoders: eatqi )
D.VI aura                 Auravision AURA
D.VI aura2                Auravision Aura 2
D.VI v210x
D.VI tmv
DEVI v210                 Uncompressed 4:2:2 10-bit
DEVI dpx                  DPX image
D.V. mad                  Electronic Arts Madcow Video (decoders: eamad )
D.VI frwu                 Forward Uncompressed
DEV. flashsv2             Flash Screen Video v2
D.V. cdgraphics           CD Graphics video
DEVI r210                 Uncompressed RGB 10-bit
D.V. anm                  Deluxe Paint Animation
D.V. binkvideo            Bink video
D.V. iff_ilbm             IFF ILBM
D.V. iff_byterun1         IFF ByteRun1
D.V. kgv1                 Kega Game Video
D.V. yop                  Psygnosis YOP Video
DEV. vp8                  On2 VP8 (encoders: libvpx )
D.VI pictor               Pictor/PC Paint
D.V. ansi                 ASCII/ANSI art
.EVI a64_multi            Multicolor charset for Commodore 64 (encoders: a64mult
i )
.EVI a64_multi5           Multicolor charset for Commodore 64, extended with 5th
 color (colram) (encoders: a64multi5 )
DEVI r10k                 AJA Kona 10-bit RGB Codec
D.V. mxpeg                Mobotix MxPEG video
D.VI lagarith             Lagarith lossless
DEVI prores               Apple ProRes (iCodec Pro) (decoders: prores prores_lgp
l ) (encoders: prores prores_anatoliy prores_kostya )
D.VI jv                   Bitmap Brothers JV video
D.V. dfa                  Chronomaster DFA
D.V. wmv3image            Windows Media Video 9 Image
D.V. vc1image             Windows Media Video 9 Image v2
DEVI utvideo              Ut Video
D.V. bmv_video            Discworld II BMV video
D.VI vble                 VBLE Lossless Codec
D.VI dxtory               Dxtory
DEVI v410                 Uncompressed 4:4:4 10-bit
DEVI xwd                  XWD (X Window Dump) image
D.V. cdxl                 Commodore CDXL video
DEVI xbm
D.V. zerocodec            ZeroCodec Lossless Video
D.V. mss1                 MS Screen 1
D.V. msa1                 MS ATC Screen
D.V. tscc2                TechSmith Screen Codec 2
D.V. mts2                 MS Expression Encoder Screen
D.VI cllc                 Canopus Lossless Codec
DEVI y41p                 Uncompressed YUV 4:1:1 12-bit
D.V. escape130            Escape 130
D.VI exr                  OpenEXR image
DEVI avrp                 Avid 1:1 10-bit RGB Packer
..V. g2m                  GoToMeeting
DEVI avui                 AVID Meridien
DEVI ayuv                 Uncompressed packed MS 4:4:4:4
DEVI v308                 Uncompressed packed 4:4:4
DEVI v408                 Uncompressed packed QT 4:4:4:4
DEVI yuv4                 Uncompressed packed 4:2:0
D.V. sanm                 LucasArts SMUSH video
D.V. paf_video            Amazing Studio Packed Animation File Video
D.V. AVRn                 AVRn
DEA. pcm_s16le            PCM signed 16-bit little-endian
DEA. pcm_s16be            PCM signed 16-bit big-endian
DEA. pcm_u16le            PCM unsigned 16-bit little-endian
DEA. pcm_u16be            PCM unsigned 16-bit big-endian
DEA. pcm_s8               PCM signed 8-bit
DEA. pcm_u8               PCM unsigned 8-bit
DEA. pcm_mulaw            PCM mu-law
DEA. pcm_alaw             PCM A-law
DEA. pcm_s32le            PCM signed 32-bit little-endian
DEA. pcm_s32be            PCM signed 32-bit big-endian
DEA. pcm_u32le            PCM unsigned 32-bit little-endian
DEA. pcm_u32be            PCM unsigned 32-bit big-endian
DEA. pcm_s24le            PCM signed 24-bit little-endian
DEA. pcm_s24be            PCM signed 24-bit big-endian
DEA. pcm_u24le            PCM unsigned 24-bit little-endian
DEA. pcm_u24be            PCM unsigned 24-bit big-endian
DEA. pcm_s24daud          PCM D-Cinema audio signed 24-bit
D.A. pcm_zork             PCM Zork
D.A. pcm_s16le_planar     PCM 16-bit little-endian planar
D.A. pcm_dvd              PCM signed 20|24-bit big-endian
DEA. pcm_f32be            PCM 32-bit floating point big-endian
DEA. pcm_f32le            PCM 32-bit floating point little-endian
DEA. pcm_f64be            PCM 64-bit floating point big-endian
DEA. pcm_f64le            PCM 64-bit floating point little-endian
D.A. pcm_bluray           PCM signed 16|20|24-bit big-endian for Blu-ray media
D.A. pcm_lxf              PCM signed 20-bit little-endian planar
D.A. s302m                SMPTE 302M
D.A. pcm_s8_planar        PCM signed 8-bit planar
DEA. adpcm_ima_qt         ADPCM IMA QuickTime
DEA. adpcm_ima_wav        ADPCM IMA WAV
D.A. adpcm_ima_dk3        ADPCM IMA Duck DK3
D.A. adpcm_ima_dk4        ADPCM IMA Duck DK4
D.A. adpcm_ima_ws         ADPCM IMA Westwood
D.A. adpcm_ima_smjpeg     ADPCM IMA Loki SDL MJPEG
DEA. adpcm_ms             ADPCM Microsoft
D.A. adpcm_4xm            ADPCM 4X Movie
D.A. adpcm_xa             ADPCM CDROM XA
DEA. adpcm_adx            SEGA CRI ADX ADPCM
D.A. adpcm_ea             ADPCM Electronic Arts
DEA. adpcm_g726           G.726 ADPCM (decoders: g726 ) (encoders: g726 )
D.A. adpcm_ct             ADPCM Creative Technology
DEA. adpcm_swf            ADPCM Shockwave Flash
DEA. adpcm_yamaha         ADPCM Yamaha
D.A. adpcm_sbpro_4        ADPCM Sound Blaster Pro 4-bit
D.A. adpcm_sbpro_3        ADPCM Sound Blaster Pro 2.6-bit
D.A. adpcm_sbpro_2        ADPCM Sound Blaster Pro 2-bit
D.A. adpcm_thp            ADPCM Nintendo Gamecube THP
D.A. adpcm_ima_amv        ADPCM IMA AMV
D.A. adpcm_ea_r1          ADPCM Electronic Arts R1
D.A. adpcm_ea_r3          ADPCM Electronic Arts R3
D.A. adpcm_ea_r2          ADPCM Electronic Arts R2
D.A. adpcm_ima_ea_sead    ADPCM IMA Electronic Arts SEAD
D.A. adpcm_ima_ea_eacs    ADPCM IMA Electronic Arts EACS
D.A. adpcm_ea_xas         ADPCM Electronic Arts XAS
D.A. adpcm_ea_maxis_xa    ADPCM Electronic Arts Maxis CDROM XA
D.A. adpcm_ima_iss        ADPCM IMA Funcom ISS
DEA. adpcm_g722           G.722 ADPCM (decoders: g722 ) (encoders: g722 )
D.A. adpcm_ima_apc        ADPCM IMA CRYO APC
DEA. amr_nb               AMR-NB (Adaptive Multi-Rate NarrowBand) (decoders: amr
nb libopencore_amrnb ) (encoders: libopencore_amrnb )
D.A. amr_wb               AMR-WB (Adaptive Multi-Rate WideBand) (decoders: amrwb
 libopencore_amrwb )
DEA. ra_144               RealAudio 1.0 (14.4K) (decoders: real_144 ) (encoders:
 real_144 )
D.A. ra_288               RealAudio 2.0 (28.8K) (decoders: real_288 )
DEA. roq_dpcm             DPCM id RoQ
D.A. interplay_dpcm       DPCM Interplay
D.A. xan_dpcm             DPCM Xan
D.A. sol_dpcm             DPCM Sol
DEA. mp2                  MP2 (MPEG audio layer 2) (decoders: mp2 mp2float )
DEA. mp3                  MP3 (MPEG audio layer 3) (decoders: mp3 mp3float ) (en
coders: libmp3lame )
DEA. aac                  AAC (Advanced Audio Coding) (encoders: aac libfaac )
DEA. ac3                  ATSC A/52A (AC-3) (encoders: ac3 ac3_fixed )
DEA. dts                  DCA (DTS Coherent Acoustics) (decoders: dca ) (encoder
s: dca )
DEA. vorbis               Vorbis (decoders: vorbis libvorbis ) (encoders: vorbis
 libvorbis )
..A. dvaudio
DEA. wmav1                Windows Media Audio 1
DEA. wmav2                Windows Media Audio 2
D.A. mace3                MACE (Macintosh Audio Compression/Expansion) 3:1
D.A. mace6                MACE (Macintosh Audio Compression/Expansion) 6:1
D.A. vmdaudio             Sierra VMD audio
DEA. flac                 FLAC (Free Lossless Audio Codec)
D.A. mp3adu               ADU (Application Data Unit) MP3 (MPEG audio layer 3) (
decoders: mp3adu mp3adufloat )
D.A. mp3on4               MP3onMP4 (decoders: mp3on4 mp3on4float )
D.A. shorten              Shorten
DEA. alac                 ALAC (Apple Lossless Audio Codec)
D.A. westwood_snd1        Westwood Audio (SND1) (decoders: ws_snd1 )
D.A. gsm                  GSM
D.A. qdm2                 QDesign Music Codec 2
D.A. cook                 Cook / Cooker / Gecko (RealAudio G2)
D.A. truespeech           DSP Group TrueSpeech
D.A. tta                  TTA (True Audio)
D.A. smackaudio           Smacker audio (decoders: smackaud )
D.A. qcelp                QCELP / PureVoice
D.A. wavpack              WavPack
D.A. dsicinaudio          Delphine Software International CIN audio
D.A. imc                  IMC (Intel Music Coder)
D.A. musepack7            Musepack SV7 (decoders: mpc7 )
D.A. mlp                  MLP (Meridian Lossless Packing)
D.A. gsm_ms               GSM Microsoft variant
D.A. atrac3               Atrac 3 (Adaptive TRansform Acoustic Coding 3)
..A. voxware              Voxware RT29 Metasound
D.A. ape                  Monkey's Audio
DEA. nellymoser           Nellymoser Asao
D.A. musepack8            Musepack SV8 (decoders: mpc8 )
DEA. speex                Speex (decoders: libspeex ) (encoders: libspeex )
D.A. wmavoice             Windows Media Audio Voice
D.A. wmapro               Windows Media Audio 9 Professional
D.A. wmalossless          Windows Media Audio Lossless
..A. atrac3p              Sony ATRAC3+
DEA. eac3                 ATSC A/52B (AC-3, E-AC-3)
D.A. sipr                 RealAudio SIPR / ACELP.NET
D.A. mp1                  MP1 (MPEG audio layer 1) (decoders: mp1 mp1float )
D.A. twinvq               VQF TwinVQ
D.A. truehd               TrueHD
D.A. mp4als               MPEG-4 Audio Lossless Coding (ALS) (decoders: als )
D.A. atrac1               Atrac 1 (Adaptive TRansform Acoustic Coding)
D.A. binkaudio_rdft       Bink Audio (RDFT)
D.A. binkaudio_dct        Bink Audio (DCT)
D.A. aac_latm             AAC LATM (Advanced Audio Coding LATM syntax)
..A. qdmc                 QDesign Music
..A. celt                 Constrained Energy Lapped Transform (CELT)
DEA. g723_1               G.723.1
D.A. g729                 G.729
D.A. 8svx_exp             8SVX exponential
D.A. 8svx_fib             8SVX fibonacci
D.A. bmv_audio            Discworld II BMV audio
D.A. ralf                 RealAudio Lossless
D.A. iac                  IAC (Indeo Audio Coder)
..A. ilbc                 iLBC (Internet Low Bitrate Codec)
D.A. vima                 LucasArts VIMA audio
D.A. AVMEDIA_TYPE_AUDIO   Wave synthesis pseudo-codec (decoders: wavesynth )
..A. 8svx_raw             8SVX raw
DEA. sonic                Sonic
.EA. sonicls              Sonic lossless
D.A. paf_audio            Amazing Studio Packed Animation File Audio
..A. opus                 Opus
DES. dvd_subtitle         DVD subtitles (decoders: dvdsub ) (encoders: dvdsub )
DES. dvb_subtitle         DVB subtitles (decoders: dvbsub ) (encoders: dvbsub )
..S. text                 raw UTF-8 text
DES. xsub                 XSUB
DES. ssa                  SSA (SubStation Alpha) / ASS (Advanced SSA) subtitle (
decoders: ass ) (encoders: ass )
DES. mov_text             MOV text
D.S. hdmv_pgs_subtitle    HDMV Presentation Graphic Stream subtitles (decoders:
pgssub )
..S. dvb_teletext         DVB teletext
DES. srt                  SubRip Text
D.S. microdvd             MicroDVD subtitle
..S. eia_608              EIA-608 closed captions
D.S. jacosub              JACOsub subtitle
D.S. sami                 SAMI subtitle
D.S. realtext             RealText subtitle
D.S. subviewer            SubViewer subtitle
D.VI bintext              Binary text
D.VI xbin                 eXtended BINary text
D.VI idf                  iCEDraw text

Change History (3)

comment:1 by jamal, 14 years ago

7c10194 changed the function, making it print the list of AVCodecDescriptors from libavcodec/codec_desc.c

The order is indeed pretty random.

comment:2 by Carl Eugen Hoyos, 14 years ago

Keywords: regression added
Priority: normalimportant
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

comment:3 by Carl Eugen Hoyos, 14 years ago

Resolution: fixed
Status: openclosed

Fixed by Nicolas George.

Note: See TracTickets for help on using tickets.