cmdutils: sort codec lists.

The lists are sorted first by type (video first)
and then alphabetically by name.

Fix ticket #1669.